--- a/src/styles/hljs-shisutakia-theme.scss
+++ b/src/styles/hljs-shisutakia-theme.scss
@@ -1,5 +1,5 @@
 $primary-color: #e0e2e4;
-$attribute-color: #d64c5c;
+$attribute-color: #e86070 / 0.9;
 $variable-color: $primary-color;
 $string-color: #4cd656;
 $comment-color: #7d8c93;
@@ -7,7 +7,7 @@ $keyword-color: #e784a2;
 $name-color: #e784a2;
 $title-color: #85b5c7;
 $symbol-color: #fff;
-$number-color: #2dd5d5;
+$number-color: #5cbffc;
 $tag-color: #e8e2b7;
 $regexp-color: #6b60aa;
 
