--- a/src/styles/hljs-shisutakia-theme.scss
+++ b/src/styles/hljs-shisutakia-theme.scss
@@ -1,9 +1,9 @@
-$primary-color: #e0e2e4;
+$primary-color: #fff;
 $attribute-color: #e86070 / 0.9;
-$variable-color: $primary-color;
-$string-color: #4cd656;
+$variable-color: scale-color(#e4d6ff, $saturation: -90%);
+$string-color: #bdc1c7;
 $comment-color: #7d8c93;
-$keyword-color: #e784a2;
+$keyword-color: scale-color(#e784a2, $saturation: 100%); 
 $name-color: #e784a2;
 $title-color: #85b5c7;
 $symbol-color: #fff;
@@ -57,7 +57,11 @@ $regexp-color: #6b60aa;
 		color: $title-color;
 	}
 
-	&literal, &variable, &template-variable, &tag .hljs-attr {
+	&variable {
 		color: $variable-color;
+	}
+
+	&literal, &template-variable, &tag .hljs-attr {
+		color: $primary-color;
 	}
 }
