--- a/src/styles/hljs-shisutakia-theme.scss
+++ b/src/styles/hljs-shisutakia-theme.scss
@@ -1,3 +1,5 @@
+$orange: #ffa243;
+
 $primary-color: #fff;
 $attribute-color: #e86070 / 0.9;
 $variable-color: scale-color(#e4d6ff, $saturation: -90%);
@@ -6,14 +8,18 @@ $comment-color: #7d8c93;
 $keyword-color: scale-color(#e784a2, $saturation: 100%); 
 $name-color: #e784a2;
 $title-color: #85b5c7;
-$symbol-color: #fff;
+$symbol-color: $orange;
 $number-color: #5cbffc;
 $tag-color: #e8e2b7;
 $regexp-color: #6b60aa;
 
+$section-color: #99f;
+$meta-color: $orange;
+
 .hljs- {
 	&keyword {
 		color: $keyword-color;
+		font-style: italic;
 	}
 
 	&attribute {
@@ -59,6 +65,14 @@ $regexp-color: #6b60aa;
 
 	&variable {
 		color: $variable-color;
+	}
+
+	&section {
+		color: $section-color;
+	}
+
+	&meta {
+		color: $meta-color;
 	}
 
 	&literal, &template-variable, &tag .hljs-attr {
