--- a/src/components/app/Popouts/Popouts/ContextMenu.scss
+++ b/src/components/app/Popouts/Popouts/ContextMenu.scss
@@ -4,7 +4,7 @@
   left: 0;
   background: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(5px);
-  z-index: 99999;
+  z-index: 9999999;
   user-select: none;
   color: white;
   overflow: hidden;
