--- a/src/components/app/Popouts/Popouts/ContextMenu.scss
+++ b/src/components/app/Popouts/Popouts/ContextMenu.scss
@@ -2,8 +2,9 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  backdrop-filter: blur(5px);
+  background: rgba(29, 127, 255, 0.2);
+  box-shadow: 0px 0px 5px 1px rgb(0, 0, 0);
+  backdrop-filter: blur(10px);
   z-index: 9999999;
   user-select: none;
   color: white;
