redesign since i didnt like the background ;c

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,4 @@
-$bg-color: #101332;
+$bg-color: #222831;
 $box-color: rgba(34, 34, 34, 0.8);
-$primary-button-color: linear-gradient(90deg, rgb(48, 111, 212) 0%, rgba(69,179,252,1) 100%);
+$other-box-color: #101332d0;
+$primary-button-color: #4f56b8;
